# mulmodal

./: .gitignore  pyproject.toml
analysis/: light_traiining_multi.R  light_training_single.R  sound_training.R
mulmodal/: 1st_step_of_training.py  2nd_step_of_training.py  3rd_step_of_training.py  4th_step_of_training.py  experiment.py  main_task.py  main_task_training.py  operant_conditional_discrimination.py  pavlovian_multi_light.py  pavlovian_single_light.py  training_light_multi.py  training_light_single.py  training_light_sound.py  training_operant.py  training_sound.py  util.py
mulmodal/config/: 1st-training-sample.yaml  2nd-training-sample.yaml  3rd-training-sample.yaml  4th-training-sample.yaml  main-task-sample.yaml  main-task-training-sample.yaml  operant_sample.yaml  pavlovian-sample.yaml  pavlovian_sample.yaml  sample.yaml  va-discrimination-sample.yaml
mulmodal/share/: __init__.py
mulmodal/training/: five_leds.py  seq_discrimination.py  single_led.py  sound.py  va_discrimination.py
mulmodal/witherr/: 3rd_step_of_training.py  4th_step_of_training.py
