[tool.poetry]
name = "mulmodal"
version = "0.1.0"
description = ""
authors = ["7cm-diameter <from.this.ridiculous.loop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
comprex = {git = "https://github.com/7cm-diameter/comprex"}
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
python-language-server = {extras = ["all"], version = "^0.36.2"}
isort = "^5.12.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
